style(ddd-bdd-tdd): fix code style warnings